Fix z-index for offcanvas cart

--- a/src/index.css
+++ b/src/index.css
@@ -167,7 +167,7 @@ h3 {
   width: 100%;
   height: 25%;
   background-color: black;
-  z-index: 40;
+  z-index: 30;
   transform: skewY(-1deg);
   transform-origin: bottom right;
   -webkit-box-shadow: 0px 10px 20px 10px rgba(0,0,0,0.4);
